# roc-matrix-vista

./: .gitignore  README.md  index.html  migrate_db.py  package-lock.json  package.json  repomix-output.xml  tailwind.config.ts  vite.config.ts
backend/: .env.example  README.md  backend-README.md  main.py  pyproject.toml  repomix-output.xml  requirements.txt  setup.py  test.db
backend/alembic/versions/: add_raw_data_to_roc_analysis.py
backend/api/routes/: roc_routes.py
backend/business_logic/: roc_calculator.py
backend/crud/: roc_crud.py
backend/db/: base_class.py  database.py  session.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 01_add_raw_data_to_roc_analysis.py  b3bc2a22b90c_add_unlabeled_predictions_column.py
backend/models/: base.py  roc_data.py
backend/routers/: roc_analysis.py
backend/services/: roc_analysis_service.py
backend/src/backend/: config.py  db.py  main.py
backend/src/backend/api/routes/: extended_metrics.py  roc_routes.py
backend/src/backend/db/: __init__.py  models.py
backend/src/backend/models/: extended_metrics.py  roc_data.py
backend/src/backend/repositories/: roc_analysis_repository.py
backend/src/backend/schemas/: roc_schemas.py
backend/src/backend/services/: extended_metrics_service.py  metrics_utils.py  roc_analysis_service.py
backend/src/backend/utils/: logging_config.py
src/: App.tsx  README.md  index.css  theme.ts
src/components/: ConfusionMatrix.tsx  DistributionPlot.tsx  Header.tsx  Layout.tsx  MuiLayout.tsx  ROCCurve.tsx  ThresholdControl.tsx  ThresholdInfo.tsx  ThresholdSlider.tsx  WorkloadSummary.tsx
src/lib/: utils.ts
src/pages/: Index.tsx  NotFound.tsx
src/services/: api.ts
src/types/: index.ts
src/utils/: mockData.ts
